Bug 391810 - KEXI broken - missing kexi_breeze.rcc
Summary: KEXI broken - missing kexi_breeze.rcc
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.2.0 Alpha
Platform: Other Linux
: NOR normal
Target Milestone: 3.2
Assignee: Jarosław Staniek
URL:
Keywords:
: 391771 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-03-13 13:35 UTC by Jonathan Riddell
Modified: 2018-12-15 23:05 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2018-03-13 13:35:47 UTC
kexi won't run says
"Could not open icon resource file kexi_breeze.rcc. "
Tried to find in /home/neon/.local/share/kexi, /usr/local
The file is in /usr/share/kexi/3.2/icons/kexi_breeze.rcc
Comment 1 Jarosław Staniek 2018-03-13 16:35:19 UTC
Thanks for the info Jonathan. So it works in 3.1 and not in 3.2?
Comment 2 Jonathan Riddell 2018-03-13 16:49:05 UTC
It works in Neon user Edition which has Kexi 3.0.2

It does not work on Neon Dev Unstable which was last built from git master on 11 March.

There is no stable git build and the user edition has not been updated to 3.1 because it still needs an update after Qt 5.10 was rolled out and our builders are not currently working due to unrelated technical faff.
Comment 3 Jarosław Staniek 2018-03-13 16:53:00 UTC
Ah I see, thanks. Would it be possible to test some improvement from a scratch master: https://cgit.kde.org/scratch/staniek/kexi3.git/ ?

I mean this commit https://cgit.kde.org/scratch/staniek/kexi3.git/commit/?id=bf83fb3ddb73b64534f6778e373f9dd377b8eed7

TIA
Comment 4 Jonathan Riddell 2018-03-13 17:14:18 UTC
compiling...
Comment 5 Jonathan Riddell 2018-03-13 17:25:12 UTC
Same problem but now it lists more directories it can't find it in

Tried to find in /home/jr/.local/share/kexi/3.2/icons/kexi/3.2, /usr/share/neon-settings-pinebook/plasma5-profile/kexi/3.2/icons/kexi/3.2, /usr/share/usr/share/xsessions/plasma/kexi/3.2/icons/kexi/3.2, /usr/local/share/kexi/3.2/icons/kexi/3.2, /usr/share/kexi/3.2/icons/kexi/3.2, /var/lib/snapd/desktop/kexi/3.2/icons/kexi/3.2, /usr/bin/data/icons/kexi/3.2, /home/jr/bin/data/icons/kexi/3.2, /home/jr/src/kubuntu-dev-tools/bin/data/icons/kexi/3.2, /home/jr/bin/data/icons/kexi/3.2, /home/jr/.local/bin/data/icons/kexi/3.2, /home/jr/bin/data/icons/kexi/3.2, /home/jr/src/kubuntu-dev-tools/bin/data/icons/kexi/3.2, /usr/local/sbin/data/icons/kexi/3.2, /usr/local/bin/data/icons/kexi/3.2, /usr/sbin/data/icons/kexi/3.2, /usr/bin/data/icons/kexi/3.2, /sbin/data/icons/kexi/3.2, /bin/data/icons/kexi/3.2, /usr/games/data/icons/kexi/3.2, /usr/local/games/data/icons/kexi/3.2 and /snap/bin/data/icons/kexi/3.2.


File is still in /usr/share/kexi/3.2/icons/kexi_breeze.rcc
Comment 6 Jarosław Staniek 2018-03-13 21:30:20 UTC
Big thanks for testing Jonathan. We're closer to the fix. Could you please grab the https://cgit.kde.org/scratch/staniek/kexi3.git/ master == 2892e4bba257c again and build?
Comment 7 Jonathan Riddell 2018-03-13 22:39:41 UTC
now it's fixed!
Comment 8 Jarosław Staniek 2018-03-13 22:59:33 UTC
Thanks Jonathan, changing product to KEXI since the fix is there.
Comment 9 Jarosław Staniek 2018-03-13 23:01:35 UTC
*** Bug 391771 has been marked as a duplicate of this bug. ***
Comment 10 Jarosław Staniek 2018-03-13 23:03:08 UTC
Git commit 178f1f6673aca4a8cdecc804db2f49b0af7b0a9d by Jaroslaw Staniek.
Committed on 13/03/2018 at 23:02.
Pushed by staniek into branch '3.1'.

Improve display of tried locations for resources lookup and lookup algorithm

In particular use bin/data/kexi/VER/icons not bin/data/icons/kexi/VER.
And reorder priority for lookup. Build dir first.

FIXED-IN:3.1.1

M  +1    -1    cmake/modules/KexiAddIconsRccFile.cmake
M  +1    -1    src/formeditor/widgetlibrary.cpp
M  +1    -1    src/main/KexiMainWindow.cpp
M  +38   -48   src/main/KexiRegisterResource_p.h
M  +2    -1    src/main/startup/KexiWelcomeStatusBar.cpp
M  +1    -1    src/pics/CMakeLists.txt

https://commits.kde.org/kexi/178f1f6673aca4a8cdecc804db2f49b0af7b0a9d