Improve display of tried locations for resources lookup and lookup algorithm

In particular use bin/data/kexi/VER/icons not bin/data/icons/kexi/VER.
And reorder priority for lookup. Build dir first.

FIXED-IN:3.1.1
BUG:391810